--- a/styles/debug-main.css
+++ b/styles/debug-main.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .scroller * {
     overflow-anchor: none;
 }
@@ -8,14 +13,24 @@
 }
   
 
-
+.debug-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 5px 10px;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    background: #333;
+}
 
 
 app-debug-container {
     position: fixed;
-    bottom: 0;
+    bottom: -30vh;
     left: 0;
     display: flex;
+    flex-direction: column;
     height: 30vh;
     width: 100%;
     background: #444;
@@ -23,11 +38,27 @@ app-debug-container {
     line-height: 1em;
     color: white;
     overflow: auto;
+    z-index: 99999;
 }
 
-.debug-element:hover {
-    box-shadow: 0 0 10px black;
-    transition: 0.25s ease all 10s;
+app-debug-container.shown {
+    bottom: 0vh;
+}
+
+app-debug-container .debugToggleVisibility {
+    bottom: 15px;
+    position: fixed;
+    right: 30px;
+    /* padding: 10px 20px; */
+    /* font-size: 16px; */
+    /* color: white; */
+    /* background: #444; */
+    /* border: none; */
+    /* border-radius: 20px 20px 0 0; */
+}
+.debug-content {
+    display: flex;
+    flex-direction: row;
 }
 
 
@@ -41,12 +72,6 @@ app-debug-container {
     display: flex;
     justify-content: space-between;
     margin: 2px 0;
-}
-
-
-app-debug-container.debug-element * {
-    line-height: 1em;
-    margin: 0;
 }
 
 .debug-log {
@@ -88,4 +113,35 @@ app-debug-container.debug-element * {
 
 .debug-log .debug-log-list .debugLogSingleItem:hover {
     background: #444444;
+}
+
+
+app-debug-container.shown .debug-header button {
+    position: relative;
+    bottom: unset;
+    border-radius: 0;
+    margin: 0 10px;
+    cursor: pointer;
+    right: unset;
+    /* border: 1px solid lightslategrey; */
+    box-shadow: 0 0 2px black;
+}
+
+.debug-header .options {
+    display: flex;
+    flex-direction: row;
+}
+
+.debug-header .options button {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white;
+    background: #444;
+    border: none;
+    border-radius: 20px 20px 0 0;
+}
+
+app-debug-container.shown .debug-header button:hover {
+    box-shadow: 0 0 15px black;
+    border: #333;
 }
