--- a/ver2/css/app.css
+++ b/ver2/css/app.css
@@ -34,7 +34,9 @@ a {
     display: flex;
     background: #444;
     width: 100%;
+    flex-direction: row;
     box-shadow: 0 0 10px black;
+    align-items: center;
 }
 
 #appContent {
@@ -67,6 +69,8 @@ div#appSidebar {
     background: #404040;
     box-shadow: 0 0 10px;
     box-shadow: 0 0 10px black;
+    display: flex;
+    flex-direction: column;
 }
 
 button {
@@ -95,4 +99,194 @@ button:active {
 
 button:focus {
     outline: none;
+}
+
+
+
+.logoSection {
+    width: 330px;
+    background: rgb(3 169 244 / 12%);
+    height: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    padding: 0 10px;
+    font-size: 25px;
+}
+.logoSection:before{
+    content: "<{[|";
+    color: #03A9F4;
+}
+.logoSection:after{
+    content: "|]}>";
+    color: #03A9F4;
+}
+
+.navOptions {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+}
+
+.dropDownMenu {
+    display: block;
+    position: relative;
+    min-width: 150px;
+    background: gray;
+    transition: 0.2s ease all;
+}
+
+.dropDownMenu .subMenu {
+    height: 0;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    background: gray;
+}
+
+.dropDownMenu button {
+    width: 100%;
+    margin: 0;
+    padding: 1em 0;
+    font-size: 1em;
+}
+
+.dropDownMenu .subMenu button {
+    font-size: 0;
+    padding: 0;
+    width: 100%;
+    display: block;
+}
+
+.dropDownMenu.open .subMenu {
+}
+
+.dropDownMenu.open .subMenu button {
+    padding: 1em 0;
+    font-size: 1em;
+}
+
+
+div#appModal {
+    position: absolute;
+    z-index: 999999;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgb(0 0 0 / 35%);
+    box-shadow: inset 0 0 50px 20px black;
+}
+
+
+div#appModal .inner {
+    background: gray;
+    width: auto;
+    position: absolute;
+    display: block;
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    top: 5em;
+    left: calc(50% - 175px);
+    box-shadow: 0 0 50px 20px black;
+}
+
+div#appModal .inner .title {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+div#appModal .inner .content {
+    display: flex;
+    flex-direction: column;
+}
+
+div#appModal .inner .content .singleOption {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 1em;
+}
+
+div#appModal .inner .options {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+input {
+    border: none;
+    background: #444;
+    color: white;
+    padding: 0.25em 1em;
+    font-size: 1em;
+}
+
+.goodColor {
+    background: #03A9F4;
+}
+
+.badColor {
+    background: #9C27B0;
+}
+
+.reallyBadColor {
+    background: #FF5722;
+}
+
+.fukNoColor {
+    background: #F44336;
+}
+
+
+#appSidebar .content {
+    flex: 1;
+}
+
+#appSidebar .tabs .singleTabName {
+    display: flex;
+    flex-direction: row;
+    border-right: 1px solid gray;
+    padding: 1em;
+}
+
+div#appSidebar .tabs {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    width: 100%;
+}
+
+div#appSidebar .tabs {
+    width: 100%;
+}
+
+div#appSidebar .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5em;
+    background: #333;
+
+}
+
+
+.svgSideElem {
+    display: flex;
+    flex: 0;
+    margin: 5px;
+    background: #5a5a5a;
+    padding: 5px;
+}
+
+
+#appSidebar .content .svgSideElem {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
